--- a/templates/base.html
+++ b/templates/base.html
@@ -1,30 +1,70 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}{% endblock %}</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css')}}">
+    <!-- <title>{% block title %}{% endblock %}</title> -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
 </head>
+
 <body>
     <header class="header">
-        <nav class="nav">
-            <ul class="nav__list">
-                <li class="nav__item"><a class="nav__link" href="/">index</a></li>
-                <li class="nav__item"><a class="nav__link" href="/greet">greet</a></li>
-                <li class="nav__item"><a class="nav__link" href="/query">query</a></li>
-                <li class="nav__item"><a class="nav__link" href="/form">form</a></li>
-                <li class="nav__item"><a class="nav__link" href="/processjson">processjson</a></li>
-                <li class="nav__item"><a class="nav__link" href="/form2">form2</a></li>
-                <li class="nav__item"><a class="nav__link" href="/table">table</a></li>
-            </ul>
+        <nav class="navbar" role="navigation" aria-label="main navigation">
+            <div class="navbar-menu">
+                <div class="navbar-start">
+                    <a class="navbar-item">
+                        Home
+                    </a>
+
+                    <a class="navbar-item">
+                        Documentation
+                    </a>
+
+                    <div class="navbar-item has-dropdown is-hoverable">
+                        <a class="navbar-link">
+                            More
+                        </a>
+
+                        <div class="navbar-dropdown">
+                            <a class="navbar-item">
+                                About
+                            </a>
+                            <a class="navbar-item">
+                                Jobs
+                            </a>
+                            <a class="navbar-item">
+                                Contact
+                            </a>
+                            <hr class="navbar-divider">
+                            <a class="navbar-item">
+                                Report an issue
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="navbar-end">
+                    <div class="navbar-item">
+                        <div class="buttons">
+                            <a class="button is-primary">
+                                <strong>Sign up</strong>
+                            </a>
+                            <a class="button is-light">
+                                Log in
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </nav>
     </header>
-    <main class="main">
+    <!-- <main class="main">
         {% block content %}
-            <p>this text is from the base layout</p>
+
         {% endblock %}
-    </main>
+    </main> -->
 </body>
+
 </html>
