--- a/templates/addfood.html
+++ b/templates/addfood.html
@@ -8,36 +8,29 @@
         <div class="panel-day__body">
             <form class="form" action="#" method="#">
                 <div class="form__field">
-                    <label class="form__label">choose food</label>
-                    <select class="form__input">
-                        <option class="form__option" value="pizza">pizza</option>
-                        <option class="form__option" value="burger">burger</option>
-                        <option class="form__option" value="meat">meat</option>
-                        <option class="form__option" value="chocolate">chocolate</option>
-                    </select>
+                    <label class="form__label">food name</label>
+                    <input class="form__input" type="text" placeholder="food name">
+                </div>
+                <div class="form__field">
+                    <label class="form__label">protein</label>
+                    <input class="form__input" type="number" placeholder="100">
+                </div>
+                <div class="form__field">
+                    <label class="form__label">carbohydrates</label>
+                    <input class="form__input" type="number" placeholder="100">
+                </div>
+                <div class="form__field">
+                    <label class="form__label">fat</label>
+                    <input class="form__input" type="number" placeholder="100">
+                </div>
+                <div class="form__field">
+                    <label class="form__label">calories</label>
+                    <input class="form__input" type="number" placeholder="100">
                 </div>
                 <button class="btn form__btn" type="submit">add</button>
             </form>
             <hr>
-            <div class="panel__body panel__body--unbordered">
-                <span class="panel__title">total</span>
-                <ul class="panel__details">
-                    <li class="panel__detail">
-                        protein: <span>100</span>
-                    </li>
-                    <li class="panel__detail">
-                        carbohydrates: <span>100</span>
-                    </li>
-                    <li class="panel__detail">
-                        fat: <span>100</span>
-                    </li>
-                    <li class="panel__detail">
-                        calories: <span>100</span>
-                    </li>
-                </ul>
-            </div>
-            <hr>
-            <ul class="day-foods">
+            <ul class="day-foods added-food">
                 <li class="panel__body panel__body--unbordered">
                     <span class="panel__title">pizza</span>
                     <ul class="panel__details">
