--- a/templates/base.html
+++ b/templates/base.html
@@ -6,31 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %}</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/global.css') }}">
 </head>
 
 <body>
     <header class="header">
         <div class="container">
-            <nav class="navbar" role="navigation" aria-label="main navigation">
-                <div class="navbar-menu">
-                    <div class="navbar-start">
-                        <a class="navbar-item">
-                            home
-                        </a>
-                        <a class="navbar-item">
-                            add food item
-                        </a>
-                    </div>
-                </div>
+            <nav class="nav">
+                <ul class="nav__list">
+                    <li class="nav__item">
+                        <a class="nav__link nav__link--active">home</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">add food item</a>
+                    </li>
+                </ul>
             </nav>
         </div>
     </header>
     <main class="main">
-        {% block content %}
-
-        {% endblock %}
+        <div class="container">
+            {% block content %}
+    
+            {% endblock %}
+        </div>
     </main>
 </body>
 
