--- a/templates/addfood.html
+++ b/templates/addfood.html
@@ -6,32 +6,32 @@
     <div class="panel-day">
         <h1 class="panel__heading">march 20, 1967</h1>
         <div class="panel-day__body">
-            <form class="form" action="#" method="#">
+            <form class="form" action="/food" method="post">
                 <div class="form__field">
                     <label class="form__label">food name</label>
-                    <input class="form__input" type="text" placeholder="food name">
+                    <input class="form__input" type="text" name="food_name" placeholder="food name">
                 </div>
                 <div class="form__field">
                     <label class="form__label">protein</label>
-                    <input class="form__input" type="number" placeholder="100">
+                    <input class="form__input" type="number" name="protein" placeholder="100">
                 </div>
                 <div class="form__field">
                     <label class="form__label">carbohydrates</label>
-                    <input class="form__input" type="number" placeholder="100">
+                    <input class="form__input" type="number" name="carbohydrates" placeholder="100">
                 </div>
                 <div class="form__field">
                     <label class="form__label">fat</label>
-                    <input class="form__input" type="number" placeholder="100">
+                    <input class="form__input" type="number" name="fat" placeholder="100">
                 </div>
                 <div class="form__field">
                     <label class="form__label">calories</label>
-                    <input class="form__input" type="number" placeholder="100">
+                    <input class="form__input" type="number" name="calories" placeholder="100">
                 </div>
                 <button class="btn form__btn" type="submit">add</button>
             </form>
             <hr>
             <ul class="day-foods added-food">
-                <li class="panel__body panel__body--unbordered">
+                <!-- <li class="panel__body panel__body--unbordered">
                     <span class="panel__title">pizza</span>
                     <ul class="panel__details">
                         <li class="panel__detail">
@@ -47,41 +47,7 @@
                             calories: <span>100</span>
                         </li>
                     </ul>
-                </li>
-                <li class="panel__body panel__body--unbordered">
-                    <span class="panel__title">pizza</span>
-                    <ul class="panel__details">
-                        <li class="panel__detail">
-                            protein: <span>100</span>
-                        </li>
-                        <li class="panel__detail">
-                            carbohydrates: <span>100</span>
-                        </li>
-                        <li class="panel__detail">
-                            fat: <span>100</span>
-                        </li>
-                        <li class="panel__detail">
-                            calories: <span>100</span>
-                        </li>
-                    </ul>
-                </li>
-                <li class="panel__body panel__body--unbordered">
-                    <span class="panel__title">pizza</span>
-                    <ul class="panel__details">
-                        <li class="panel__detail">
-                            protein: <span>100</span>
-                        </li>
-                        <li class="panel__detail">
-                            carbohydrates: <span>100</span>
-                        </li>
-                        <li class="panel__detail">
-                            fat: <span>100</span>
-                        </li>
-                        <li class="panel__detail">
-                            calories: <span>100</span>
-                        </li>
-                    </ul>
-                </li>
+                </li> -->
             </ul>
         </div>
     </div>
