--- a/templates/ask.html
+++ b/templates/ask.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}faq app | home page{% endblock %}
+{% block title %}faq app | ask a question{% endblock %}
 
 {% block header %}
     <header class="header">
@@ -48,18 +48,20 @@
 {% endblock %}
 
 {% block content %}
-    <div class="answered">
-        <h1 class="answered__heading heading">Answered questions</h1>
-        <ul class="answered__list">
-            {% for question in questions %}
-                <li class="answered__item">
-                    <a href="/question/{{ question['id'] }}" class="answered__link">
-                        <h2 class="answered__item-heading">{{ question['question_text'] }}</h2>
-                        <p class="answered__item-questioner">Asked by: {{ question['asker'] }}</p>
-                        <p class="answered__item-answerer">Answered by: {{ question['expert'] }}</p>
-                    </a>
-                </li>
-            {% endfor %}
-        </ul>
-    </div>
+    <h1 class="heading">Ask a question</h1>
+    <form action="/ask" class="form form--ask" method="post">
+        <div class="form__group form__group-question">
+            <label class="form__text-label" for="login-question">Question</label>
+            <textarea class="form__text-input form__textarea" type="text" id="login-question" rows="5" name="question"></textarea>
+        </div>
+        <div class="form__group">
+            <label class="form__text-label" for="login-answerer">Expert</label>
+            <select class="form__select" id="login-answerer" name="expert">
+                {% for expert in experts %}
+                    <option value="{{ expert['id'] }}">{{ expert['name'] }}</option>
+                {% endfor %}
+            </select>
+        </div>
+        <button class="btn form__btn" type="submit">Submit</button>
+    </form>
 {% endblock %}
