--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %}</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/global.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 </head>
 
 <body>
@@ -18,6 +18,18 @@
             {% endblock %}
         </div>
     </main>
+    <script>
+        if (document.querySelector(".form__error")) {
+            const errorMsg = document.querySelector(".form__error");
+            const usernameInput = document.querySelector(".form__text-input--username");
+
+            usernameInput.addEventListener("input", () => {
+                errorMsg.style.display = "none"
+            }, {
+                once: true
+            })
+        }
+    </script>
 </body>
 
 </html>
